--- a/app/src/main/res/layout/item_workspace_grid.xml
+++ b/app/src/main/res/layout/item_workspace_grid.xml
@@ -31,10 +31,11 @@
             android:layout_alignParentLeft="true" />
 
         <ImageView
-            android:id="@+id/image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:id="@+id/workspace_overflow"
+            android:layout_width="34dp"
+            android:layout_height="40dp"
             android:layout_gravity="top|right"
+            android:padding="0dp"
             android:clickable="true"
             android:src="@drawable/ic_action_overflow"
             android:layout_alignBottom="@+id/title"
