--- a/app/src/main/res/layout/item_workspace_grid.xml
+++ b/app/src/main/res/layout/item_workspace_grid.xml
@@ -1,46 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    android:id="@+id/frame"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <RelativeLayout
-        android:id="@+id/container"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@android:dimen/notification_large_icon_width"
-        tools:ignore="UselessParent">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/row_imageView1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/ic_action_overflow" />
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:gravity="center_horizontal"
-            android:shadowColor="#000000"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="10"
-            android:textColor="@android:color/holo_orange_dark"
-            android:textSize="@dimen/abc_text_size_body_1_material"
-            android:textStyle="bold"
-            tools:text="Hello"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:text="Some Item"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#333333" />
 
-        <ImageView
-            android:id="@+id/workspace_overflow"
-            android:layout_width="34dp"
-            android:layout_height="40dp"
-            android:layout_gravity="top|right"
-            android:padding="0dp"
-            android:clickable="true"
-            android:src="@drawable/ic_action_overflow"
-            android:layout_alignBottom="@+id/title"
-            android:layout_alignParentRight="true" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-</RelativeLayout>
+            <ImageView
+                android:id="@+id/workspace_overflow"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="right"
+                android:clickable="true"
+                android:src="@drawable/ic_action_overflow" />
 
-</FrameLayout>
+            <TextView
+                android:id="@+id/row_install_textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:padding="10dp"
+                android:text="Install"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="#333333" />
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
