--- a/app/src/main/res/menu/menu_item_workspace.xml
+++ b/app/src/main/res/menu/menu_item_workspace.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/workspace_overflow_about"
         android:icon="@drawable/ic_action_about"
-        android:title="@string/about" />
+        android:title="@string/detail" />
     <item
         android:id="@+id/workspace_overflow_edit"
         android:icon="@drawable/ic_action_edit"
@@ -15,6 +15,6 @@
     <item
         android:id="@+id/workspace_overflow_invite"
         android:icon="@drawable/ic_action_add_person"
-        android:title="@string/delete" />
+        android:title="@string/invite" />
 
 </menu>
