--- a/app/src/main/res/layout/fragment_create_workspace.xml
+++ b/app/src/main/res/layout/fragment_create_workspace.xml
@@ -62,15 +62,25 @@
         android:fillViewport="true">
 -->
         <LinearLayout
-            android:id="@+id/newTag"
+            android:id="@+id/layoutNewTag"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/privacy_title"
+                android:id="@+id/textViewPrivacy"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp" />
+
 
             <ListView
                 android:id="@+id/tagList"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="200dp"
                 android:clickable="true" />
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -84,7 +94,7 @@
                     android:singleLine="true"
                     android:lines="1"
                     android:maxLines="1"
-                    android:hint="tag"/>
+                    android:hint="hint"/>
 
                 <ImageButton
                     android:id="@+id/buttonAddTag"
@@ -93,7 +103,7 @@
                     android:background="@android:drawable/ic_input_add" />
             </LinearLayout>
         </LinearLayout>
-<!--    </ScrollView> -->
+    <!--    </ScrollView> -->
 
     <LinearLayout
             android:layout_width="match_parent"
