--- a/app/src/main/res/layout/item_workspace_grid.xml
+++ b/app/src/main/res/layout/item_workspace_grid.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="@android:dimen/notification_large_icon_width"
+        android:layout_height="50dp"
         tools:ignore="UselessParent">
 
         <TextView
@@ -19,12 +19,8 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:gravity="center_horizontal"
-            android:shadowColor="#000000"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="10"
-            android:textColor="@android:color/holo_orange_dark"
-            android:textSize="@dimen/abc_text_size_body_1_material"
+            android:textColor="@color/ColorDarkGreen"
+            android:textSize="@dimen/abc_text_size_title_material"
             android:textStyle="bold"
             tools:text="Hello"
             android:layout_centerVertical="true"
