--- a/app/src/main/res/layout/item_workspace_grid.xml
+++ b/app/src/main/res/layout/item_workspace_grid.xml
@@ -3,11 +3,11 @@
     android:id="@+id/frame"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
     <RelativeLayout
         android:id="@+id/container"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         tools:ignore="UselessParent">
 
@@ -15,6 +15,7 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="20"
             android:layout_gravity="bottom|end"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
@@ -30,6 +31,7 @@
             android:id="@+id/workspace_overflow"
             android:layout_width="34dp"
             android:layout_height="40dp"
+            android:layout_weight="40"
             android:layout_gravity="top|right"
             android:padding="0dp"
             android:clickable="true"
