--- a/app/src/main/res/layout/fragment_invite_client.xml
+++ b/app/src/main/res/layout/fragment_invite_client.xml
@@ -3,7 +3,11 @@
     android:layout_height="match_parent"
     tools:context="pt.ulisboa.tecnico.cmov.airdesk.InviteClientFragment">
 
-    <TextView android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/workspace_name"
+        android:id="@+id/textViewWorksName"
+        android:layout_gravity="center_horizontal" />
 </FrameLayout>
