feature Invite Clients implemented

--- a/app/src/main/res/layout/fragment_invite_client.xml
+++ b/app/src/main/res/layout/fragment_invite_client.xml
@@ -1,6 +1,7 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="pt.ulisboa.tecnico.cmov.airdesk.InviteClientFragment">
 
     <TextView
@@ -10,4 +11,54 @@
         android:text="@string/workspace_name"
         android:id="@+id/textViewWorksName"
         android:layout_gravity="center_horizontal" />
-</FrameLayout>
+
+    <ListView
+        android:id="@+id/tagList"
+        android:layout_width="fill_parent"
+        android:layout_height="200dp"
+        android:clickable="true" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/editTextNewItem"
+            android:layout_weight="5"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:lines="1"
+            android:maxLines="1"
+            android:hint="hint"/>
+
+        <ImageButton
+            android:id="@+id/buttonAddItem"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@android:drawable/ic_input_add" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/buttonCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:text="Cancel" />
+
+        <Button
+            android:id="@+id/buttonCreate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:text="Create" />
+    </LinearLayout>
+
+</LinearLayout>
