feature edit Clients implemented (still have one bug)

--- a/app/src/main/res/layout/fragment_invite_client.xml
+++ b/app/src/main/res/layout/fragment_invite_client.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="pt.ulisboa.tecnico.cmov.airdesk.InviteClientFragment">
@@ -50,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:clickable="true"
-            android:text="Cancel" />
+            android:text="@string/cancel" />
 
         <Button
             android:id="@+id/buttonCreate"
@@ -58,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:clickable="true"
-            android:text="Create" />
+            android:text="@string/update" />
     </LinearLayout>
 
 </LinearLayout>
