--- a/app/src/main/res/menu/menu_workspace_files.xml
+++ b/app/src/main/res/menu/menu_workspace_files.xml
@@ -2,7 +2,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="pt.ulisboa.tecnico.cmov.airdesk.WorkspaceFilesActivity">
+
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_new_local_workspace"
+        android:orderInCategory="200"
+        android:title="User"
+        android:icon="@drawable/ic_action_new"
+        app:showAsAction="ifRoom"
+        />
 </menu>
