--- a/app/src/main/res/layout/fragment_edit_file.xml
+++ b/app/src/main/res/layout/fragment_edit_file.xml
@@ -15,9 +15,9 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_gravity="top|left"
+            android:layout_gravity="top"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
+            android:layout_centerHorizontal="false"
             android:layout_above="@+id/buttonSave" />
 
         <Button
