--- a/app/src/main/res/layout/activity_airdesk.xml
+++ b/app/src/main/res/layout/activity_airdesk.xml
@@ -4,7 +4,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
     tools:context=".AirdeskActivity">
 
     <include
@@ -29,11 +29,11 @@
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:layout_weight="1"/>
-    </LinearLayout>>
+    </LinearLayout>
     <LinearLayout
         android:id="@+id/bottom_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
-    </LinearLayout>>
+    </LinearLayout>
 </LinearLayout>
