--- a/app/src/main/res/layout/activity_workspace_files.xml
+++ b/app/src/main/res/layout/activity_workspace_files.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="pt.ulisboa.tecnico.cmov.airdesk.WorkspaceFilesActivity">
+    tools:context="pt.ulisboa.tecnico.cmov.airdesk.view.activity.WorkspaceFilesActivity">
 
     <include
         android:id="@+id/tool_bar1"
