--- a/app/src/main/res/layout/fragment_invite_client.xml
+++ b/app/src/main/res/layout/fragment_invite_client.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="pt.ulisboa.tecnico.cmov.airdesk.fragment.InviteClientFragment">
+    tools:context="pt.ulisboa.tecnico.cmov.airdesk.view.fragment.InviteClientFragment">
 
     <TextView
         android:layout_width="wrap_content"
