--- a/app/src/main/res/layout/fragment_new_file.xml
+++ b/app/src/main/res/layout/fragment_new_file.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pt.ulisboa.tecnico.cmov.airdesk.fragment.NewFileFragment">
+    tools:context="pt.ulisboa.tecnico.cmov.airdesk.view.fragment.NewFileFragment">
 
     <EditText
         android:id="@+id/textViewFileName"
