--- a/app/src/main/res/layout/fragment_show_file.xml
+++ b/app/src/main/res/layout/fragment_show_file.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pt.ulisboa.tecnico.cmov.airdesk.fragment.showFileFragment">
+    tools:context="pt.ulisboa.tecnico.cmov.airdesk.view.fragment.showFileFragment">
 
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
