--- a/app/src/main/res/menu/menu_workspace_files.xml
+++ b/app/src/main/res/menu/menu_workspace_files.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="pt.ulisboa.tecnico.cmov.airdesk.WorkspaceFilesActivity">
+    tools:context="pt.ulisboa.tecnico.cmov.airdesk.view.activity.WorkspaceFilesActivity">
 
     <item
         android:id="@+id/action_new_file"
