--- a/app/src/main/res/layout/activity_wifi_direct.xml
+++ b/app/src/main/res/layout/activity_wifi_direct.xml
@@ -17,6 +17,17 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewDeviceName"
+            android:text="@string/device_name"
+            android:singleLine="true"
+            android:textStyle="bold"
+            android:layout_gravity="left"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="16dp"
+            />
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
